UI.WEB : Added  Categorylist Product List

--- a/E-Commerce.UI.WEB/Views/Category/Index.cshtml
+++ b/E-Commerce.UI.WEB/Views/Category/Index.cshtml
@@ -3,7 +3,11 @@
 
 @{
     ViewBag.Title = "Index";
+    var category = (E_Commerce.Core.Model.Entity.Category)ViewBag.category;
 }
+
+<h2>@category.Name</h2>
+
 
 @{
     foreach (var item in Model)
