--- a/E-Commerce.UI.WEB/Views/Shared/_Layout.cshtml
+++ b/E-Commerce.UI.WEB/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title </title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+
     <style>
         /* Özel CSS stilleri buraya eklenebilir */
     </style>
@@ -18,7 +20,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    @Html.Action("GetMenu","Home")
+                    @Html.Action("GetMenu", "Home")
                 </ul>
             </div>
         </nav>
@@ -38,5 +40,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Jquery Modell -->
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    @RenderSection("script", false)
 </body>
 </html>
