--- a/E-Commerce.UI.WEB/Views/Home/GetMenu.cshtml
+++ b/E-Commerce.UI.WEB/Views/Home/GetMenu.cshtml
@@ -24,6 +24,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 Welcome @usr.Name
+                <a class="dropdown-item" href="/Basket">My Cart</a>
                 <a class="dropdown-item" href="#">Siparişlerim</a>
                 <a class="dropdown-item" href="#">Ayarlarım</a>
                 <div class="dropdown-divider"></div>
