UI.WEB : OrderController

--- a/E-Commerce.UI.WEB/Views/Home/GetMenu.cshtml
+++ b/E-Commerce.UI.WEB/Views/Home/GetMenu.cshtml
@@ -25,7 +25,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 Welcome @usr.Name
                 <a class="dropdown-item" href="/Basket">My Cart</a>
-                <a class="dropdown-item" href="#">Siparişlerim</a>
+                <a class="dropdown-item" href="/MyOrder">My Order</a>
                 <a class="dropdown-item" href="#">Ayarlarım</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Çıkış Yap</a>
