--- a/E-Commerce.UI.WEB/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/E-Commerce.UI.WEB/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,10 +1,5 @@
 ﻿<!doctype html>
-<!--
-* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
-* Copyright 2018-2023 The Tabler Authors
-* Copyright 2018-2023 codecalm.net Paweł Kuna
-* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
--->
+
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -17,7 +12,7 @@
     <link href="~/Areas/Admin/AdminTheme/dist/css/tabler-payments.min.css?1684106062" rel="stylesheet" />
     <link href="~/Areas/Admin/AdminTheme/dist/css/tabler-vendors.min.css?1684106062" rel="stylesheet" />
     <link href="~/Areas/Admin/AdminTheme/dist/css/demo.min.css?1684106062" rel="stylesheet" />
-    
+
 </head>
 <body>
     <script src="~/Areas/Admin/AdminTheme/dist/js/demo-theme.min.js?1684106062"></script>
@@ -34,20 +29,7 @@
                     </a>
                 </h1>
                 <div class="navbar-nav flex-row order-md-last">
-                    <div class="nav-item d-none d-md-flex me-3">
-                        <div class="btn-list">
-                            <a href="https://github.com/tabler/tabler" class="btn" target="_blank" rel="noreferrer">
-                                <!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" /></svg>
-                                Source code
-                            </a>
-                            <a href="https://github.com/sponsors/codecalm" class="btn" target="_blank" rel="noreferrer">
-                                <!-- Download SVG icon from http://tabler-icons.io/i/heart -->
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon text-pink" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" /></svg>
-                                Sponsor
-                            </a>
-                        </div>
-                    </div>
+
                     <div class="d-none d-md-flex">
                         <a href="?theme=dark" class="nav-link px-0 hide-theme-dark" title="Enable dark mode" data-bs-toggle="tooltip"
                            data-bs-placement="bottom">
@@ -154,11 +136,11 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                             <a href="#" class="dropdown-item">Status</a>
-                            <a href="profile.html" class="dropdown-item">Profile</a>
+                            <a href="~/Areas/Admin/AdminTheme/profile.html" class="dropdown-item">Profile</a>
                             <a href="#" class="dropdown-item">Feedback</a>
                             <div class="dropdown-divider"></div>
-                            <a href="settings.html" class="dropdown-item">Settings</a>
-                            <a href="sign-in.html" class="dropdown-item">Logout</a>
+                            <a href="~/Areas/Admin/AdminTheme/settings.html" class="dropdown-item">Settings</a>
+                            <a href="~/Areas/Admin/AdminTheme/sign-in.html" class="dropdown-item">Logout</a>
                         </div>
                     </div>
                 </div>
@@ -201,6 +183,13 @@
                                     </span>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Admin/AdminOrders">
+                                    <span class="nav-link-title">
+                                        Orders
+                                    </span>
+                                </a>
+                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#navbar-help" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
@@ -228,19 +217,27 @@
                                     </a>
                                 </div>
                             </li>
-
-
-
                         </ul>
-
                     </div>
                 </div>
             </div>
         </header>
         <div class="page-wrapper">
+            <!-- Page header -->
+            <div class="page-header d-print-none">
+                <div class="container-xl">
+                    <div class="row g-2 align-items-center">
+                        <div class="col">
+                            <h2 class="page-title">
+                                Datatables
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- Page body -->
             <div class="page-body">
-                <div class="container-xl d-flex flex-column justify-content-center">
+                <div class="container-xl">
                     @RenderBody()
                 </div>
             </div>
@@ -250,7 +247,7 @@
                         <div class="col-lg-auto ms-lg-auto">
                             <ul class="list-inline list-inline-dots mb-0">
                                 <li class="list-inline-item"><a href="https://tabler.io/docs" target="_blank" class="link-secondary" rel="noopener">Documentation</a></li>
-                                <li class="list-inline-item"><a href="license.html" class="link-secondary">License</a></li>
+                                <li class="list-inline-item"><a href="~/Areas/Admin/AdminTheme/license.html" class="link-secondary">License</a></li>
                                 <li class="list-inline-item"><a href="https://github.com/tabler/tabler" target="_blank" class="link-secondary" rel="noopener">Source code</a></li>
                                 <li class="list-inline-item">
                                     <a href="https://github.com/sponsors/codecalm" target="_blank" class="link-secondary" rel="noopener">
@@ -269,7 +266,7 @@
                                     All rights reserved.
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="changelog.html" class="link-secondary" rel="noopener">
+                                    <a href="~/Areas/Admin/AdminTheme/changelog.html" class="link-secondary" rel="noopener">
                                         v1.0.0-beta19
                                     </a>
                                 </li>
@@ -279,28 +276,24 @@
                 </div>
             </footer>
         </div>
-        </divf
-        <!-- Libs JS -->
-        <!-- Tabler Core -->
-        <script src="~/Areas/Admin/AdminTheme/dist/js/tabler.min.js?1684106062" defer></script>
-        <script src="~/Areas/Admin/AdminTheme/dist/js/demo.min.js?1684106062" defer></script>
-        <!-- Libs JS -->
-        <script src="~/Areas/Admin/AdminTheme/dist/libs/list.js/dist/list.min.js?1684106062" defer></script>
-        <!-- Tabler Core -->
-        <script src="~/Areas/Admin/AdminTheme/dist/js/tabler.min.js?1684106062" defer></script>
-        <script src="~/Areas/Admin/AdminTheme/dist/js/demo.min.js?1684106062" defer></script>
-        <script>
-            document.addEventListener("DOMContentLoaded", function () {
-                const list = new List('table-default', {
-                    sortClass: 'table-sort',
-                    listClass: 'table-tbody',
-                    valueNames: ['sort-name', 'sort-type', 'sort-city', 'sort-score',
-                        { attr: 'data-date', name: 'sort-date' },
-                        { attr: 'data-progress', name: 'sort-progress' },
-                        'sort-quantity'
-                    ]
-                });
-            })
-        </script>
+    </div>
+    <!-- Libs JS -->
+    <script src="~/Areas/Admin/AdminTheme/dist/libs/list.js/dist/list.min.js?1684106062" defer></script>
+    <!-- Tabler Core -->
+    <script src="~/Areas/Admin/AdminTheme/dist/js/tabler.min.js?1684106062" defer></script>
+    <script src="~/Areas/Admin/AdminTheme/dist/js/demo.min.js?1684106062" defer></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const list = new List('table-default', {
+                sortClass: 'table-sort',
+                listClass: 'table-tbody',
+                valueNames: ['sort-name', 'sort-type', 'sort-city', 'sort-score',
+                    { attr: 'data-date', name: 'sort-date' },
+                    { attr: 'data-progress', name: 'sort-progress' },
+                    'sort-quantity'
+                ]
+            });
+        })
+    </script>
 </body>
 </html>
