--- a/E-Commerce.UI.WEB/Areas/Admin/Views/Users/Index.cshtml
+++ b/E-Commerce.UI.WEB/Areas/Admin/Views/Users/Index.cshtml
@@ -17,11 +17,11 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th><button class="table-sort" data-sort="sort-@Html.DisplayNameFor(model => model.Name)"> @Html.DisplayNameFor(model => model.Name) </button></th>
-                        <th><button class="table-sort" data-sort="sort-@Html.DisplayNameFor(model => model.Email)"> @Html.DisplayNameFor(model => model.Email)</button></th>
-                        <th><button class="table-sort" data-sort="sort-@Html.DisplayNameFor(model => model.WalletAddress)"> @Html.DisplayNameFor(model => model.WalletAddress)</button></th>
-                        <th><button class="table-sort" data-sort="sort-@Html.DisplayNameFor(model => model.IsActive)"> @Html.DisplayNameFor(model => model.IsActive)</button></th>
-                        <th><button class="table-sort" data-sort="sort-@Html.DisplayNameFor(model => model.IsAdmin)"> @Html.DisplayNameFor(model => model.IsAdmin)</button></th>
+                        <th><button class="table-sort" data-sort="sort-name"> @Html.DisplayNameFor(model => model.Name) </button></th>
+                        <th><button class="table-sort" data-sort="sort-email"> @Html.DisplayNameFor(model => model.Email)</button></th>
+                        <th><button class="table-sort" data-sort="sort-wallet"> @Html.DisplayNameFor(model => model.WalletAddress)</button></th>
+                        <th><button class="table-sort" data-sort="sort-isactive"> @Html.DisplayNameFor(model => model.IsActive)</button></th>
+                        <th><button class="table-sort" data-sort="sort-isadmin"> @Html.DisplayNameFor(model => model.IsAdmin)</button></th>
                         <th><button class="table-sort" >Action</button></th>
 
                     </tr>
@@ -31,11 +31,11 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td class="sort-@Html.DisplayNameFor(model => model.Name)">@Html.DisplayFor(modelItem => item.Name)</td>
-                            <td class="sort-@Html.DisplayNameFor(model => model.Email)">@Html.DisplayFor(modelItem => item.Email)</td>
-                            <td class="sort-@Html.DisplayNameFor(model => model.WalletAddress)">@Html.DisplayFor(modelItem => item.WalletAddress)</td>
-                            <td class="sort-@Html.DisplayNameFor(model => model.IsActive)">@Html.DisplayFor(modelItem => item.IsActive)</td>
-                            <td class="sort-@Html.DisplayNameFor(model => model.IsAdmin)">@Html.DisplayFor(modelItem => item.IsAdmin)</td>
+                            <td class="sort-name">@Html.DisplayFor(modelItem => item.Name)</td>
+                            <td class="sort-email">@Html.DisplayFor(modelItem => item.Email)</td>
+                            <td class="sort-wallet">@Html.DisplayFor(modelItem => item.WalletAddress)</td>
+                            <td class="sort-isactive">@Html.DisplayFor(modelItem => item.IsActive)</td>
+                            <td class="sort-isadmin">@Html.DisplayFor(modelItem => item.IsAdmin)</td>
                             <td>
                                 @Html.ActionLink("Edit", "Edit", new { id = item.ID } , new { @class = "btn btn-info" }) |
                                 @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "btn btn-primary" }) |
